--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container main-nav">
         <nav class="nav">
             <a href="./" class="link logo"><span class="web">Web</span>Studio</a>
             <ul class="nav-list">
-                <li><a class="link nav-link stud-lnk" href="">Студия</a></li>
-                <li><a class="link nav-link" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="link nav-link" href="">Контакты</a></li>
+                <li class="item"><a class="link nav-link stud-lnk" href="">Студия</a></li>
+                <li class="item"><a class="link nav-link" href="./portfolio.html">Портфолио</a></li>
+                <li class="item"><a class="link nav-link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-        <li><a class="link nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link nav-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="addr">
+        <li class="item"><a class="link nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="item"><a class="link nav-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
         </div>
     </header>
@@ -32,10 +32,10 @@
         <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>ДЛЯ ВАШЕГО БИЗНЕССА</h1>
         <button type="button" class="hero-button"> Заказать услугу</button>
     </section>
-    <div class="container">
-    <section class="info">
-        <ul>
-            <li>
+    <section>
+        <div class="container main-info">
+        <ul class="info-list">
+            <li class="info-block">
                 <h3 class="info-title">Внимание к деталям</h3>
                 <p class="info-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
@@ -51,41 +51,49 @@
             <p class="info-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
-    </section>
     </div>
+    </section>
+
     <section class="wwd">
+        <div class="wwd-main container">
         <h2 class="wwd-title">Чем мы занимаемся</h2>
-        <ul>
-        <li><img src="./images/box1.jpg" alt="notebook" width="370"></li>
-        <li><img src="./images/box2.jpg" alt="with hand" width="370"></li>
-        <li><img src="./images/box3.jpg" alt="tablet" width="370"></li>
+        <ul class="wwd-list">
+        <li><img class="img" src="./images/box1.jpg" alt="notebook" width="370"></li>
+        <li><img class="img" src="./images/box2.jpg" alt="with hand" width="370"></li>
+        <li><img class="img-q" src="./images/box3.jpg" alt="tablet" width="370"></li>
         </ul>
+        </div>
     </section>
     <section class="team">
+        <div class="container tam-main">
         <h2 class="team-title">Наша команда</h2>
-        <ul>
-            <li><img src="./images/teamcard1.jpg" alt="1" width="270">
-            <h3 class="team-subtitle">Игорь Демьяненко</h3>
-            <p class="team-text">Product Designer</p></li>
-            <li><img src="./images/teamcard2.jpg" alt="2" width="270">
-            <h3 class="team-subtitle">Ольга Репина</h3>
-            <p class="team-text">Frontend Developer</p></li>
-            <li><img src="./images/teamcard3.jpg" alt="3" width="270">
-            <h3 class="team-subtitle">Николай Тарасов</h3>
-            <p class="team-text">Marketing</p></li>
-            <li><img src="./images/teamcard4.jpg" alt="4" width="270">
-            <h3 class="team-subtitle">Михаил Ермаков</h3>
-            <p class="team-text">UI Designer</p></li>
-        </ul>    
+        <ul class="team-list">
+            <li class="team-card"><div class="team-img"><img src="./images/teamcard1.jpg" alt="1" width="270"></div>
+            <div class="team-txt"><h3 class="team-subtitle">Игорь Демьяненко</h3>
+            <p class="team-text">Product Designer</p></div></li>
+            <li class="team-card"><div class="team-img"><img src="./images/teamcard2.jpg" alt="1" width="270"></div>
+                <div class="team-txt"><h3 class="team-subtitle">Ольга Репина</h3>
+            <p class="team-text">Frontend Developer</p></div></li>
+            <li class="team-card"><div class="team-img"><img src="./images/teamcard3.jpg" alt="1" width="270"></div>
+                <div class="team-txt"><h3 class="team-subtitle">Николай Тарасов</h3>
+            <p class="team-text">Marketing</p></div></li>
+            <li class="team-card"><div class="team-img"><img src="./images/teamcard3.jpg" alt="1" width="270"></div>
+                <div class="team-txt"><h3 class="team-subtitle">Михаил Ермаков</h3>
+            <p class="team-text">UI Designer</p></div></li>
+        </ul>
+    </div> 
     </section>
 </main>
 <footer class="info-links">
+    <div class="container main-bottom">
     <a class="link logo-bottom" href="./"><span class="web">Web</span>Studio</a>
-    <address class="our-location">г. Киев, пр-т Леси Украинки, 26</address>
+    <div class="location">
+    <address class="our-location footer-item">г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
-    <li><a class="link bottom-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li class="footer-item"><a  href="mailto:info@devstudio.com" class="link bottom-link ">info@devstudio.com</a></li>
     <li><a class="link bottom-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
+    </div>
 </footer>
 </body>
 </html>
