--- a/portfolio.html
+++ b/portfolio.html
@@ -11,95 +11,101 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-          <a class="link logo" href="./"><span class="web">Web</span>Studio</a>
-          <ul>
-              <li><a class="link nav-link" href="./index.html">Студия</a></li>
-              <li><a class="link nav-link port-lnk" href="./portfolio.html">Портфолио</a></li>
-              <li><a class="link nav-link" href="">Контакты</a></li>
+    <header class="header">
+      <div class="container main-nav">
+      <nav class="nav">
+          <a href="./" class="link logo"><span class="web">Web</span>Studio</a>
+          <ul class="nav-list">
+              <li class="item"><a class="link nav-link" href="./index.html">Студия</a></li>
+              <li class="item"><a class="link nav-link stud-lnk" href="./portfolio.html">Портфолио</a></li>
+              <li class="item"><a class="link nav-link" href="">Контакты</a></li>
           </ul>
       </nav>
-      <ul>
-      <li><a class="link nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a class="link nav-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="addr">
+      <li class="item"><a class="link nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="item"><a class="link nav-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+      </div>
   </header>
     <main>
-      <section>
-      <ul>
-        <li><button type="button" class="little-button">Все</button></li>
-        <li><button type="button" class="little-button">Веб-сайты</button></li>
-        <li><button type="button" class="little-button">Приложения</button></li>
-        <li><button type="button" class="little-button">Дизайн</button></li>
-        <li><button type="button" class="little-button">Маркетинг</button></li>
+      <section class="profile">
+        <div class="container">
+      
+      <ul class="profile-buttons">
+        <li class="btn"><button type="button" class="little-button">Все</button></li>
+        <li class="btn"><button type="button" class="little-button">Веб-сайты</button></li>
+        <li class="btn"><button type="button" class="little-button">Приложения</button></li>
+        <li class="btn"><button type="button" class="little-button">Дизайн</button></li>
+        <li class="btn"><button type="button" class="little-button">Маркетинг</button></li>
       </ul>
-    </section>
-    <section class="profile">
-      <ul>
-        <li>
-          <img src="./images/1.jpg" alt="1" width="370" />
+      <ul class="profile-img">
+        <li class="profile-content">
+          <img class="prof-img" src="./images/1.jpg" alt="1" width="370" />
           <h3 class="profile-title">Технокряк</h3>
           <p class="profile-text">Веб-сайты</p>
         </li>
 
-        <li>
-          <img src="./images/2.jpg" alt="1" width="370" />
+        <li class="profile-content">
+          <img class="prof-img" src="./images/2.jpg" alt="1" width="370" />
           <h3 class="profile-title">Постер New Orlean vs Golden Star</h3>
           <p class="profile-text">Дизайн</p>
         </li>
 
-        <li>
-          <img src="./images/3.jpg" alt="1" width="370" />
+        <li class="profile-content-min">
+          <img class="prof-img" src="./images/3.jpg" alt="1" width="370" />
           <h3 class="profile-title">Ресторан Seafood</h3>
           <p class="profile-text">Приложение</p>
         </li>
 
-        <li>
-          <img src="./images/4.jpg" alt="1" width="370" />
+        <li class="profile-content">
+          <img class="prof-img" src="./images/4.jpg" alt="1" width="370" />
           <h3 class="profile-title">Проект Prime</h3>
           <p class="profile-text">Маркетинг</p>
         </li>
 
-        <li>
-          <img src="./images/5.jpg" alt="1" width="370" />
+        <li class="profile-content">
+          <img class="prof-img" src="./images/5.jpg" alt="1" width="370" />
           <h3 class="profile-title">Проект Boxes</h3>
           <p class="profile-text">Приложение</p>
         </li>
 
-        <li>
-          <img src="./images/6.jpg" alt="1" width="370" />
+        <li class="profile-content-min">
+          <img class="prof-img" src="./images/6.jpg" alt="1" width="370" />
           <h3 class="profile-title">Inspiration has no Borders</h3>
           <p class="profile-text">Веб-сайт</p>
         </li>
 
-        <li>
-          <img src="./images/7.jpg" alt="1" width="370" />
+        <li class="profile-content">
+          <img class="prof-img" src="./images/7.jpg" alt="1" width="370" />
           <h3 class="profile-title">Издание Limited Edition</h3>
           <p class="profile-text">Дизайн</p>
         </li>
 
-        <li>
-          <img src="./images/8.jpg" alt="1" width="370" />
+        <li class="profile-content">
+          <img class="prof-img" src="./images/8.jpg" alt="1" width="370" />
           <h3 class="profile-title">Проект LAB</h3>
           <p class="profile-text">Маркетинг</p>
         </li>
 
-        <li>
-          <img src="./images/9.jpg" alt="1" width="370" />
+        <li class="profile-content-min">
+          <img class="prof-img" src="./images/9.jpg" alt="1" width="370" />
           <h3 class="profile-title">Growing Business</h3>
           <p class="profile-text">Приложение</p>
         </li>
       </ul>
+    </div>
     </section>
     </main>
     <footer class="info-links">
+      <div class="container main-bottom">
       <a class="link logo-bottom" href="./"><span class="web">Web</span>Studio</a>
-      <address class="our-location">г. Киев, пр-т Леси Украинки, 26</address>
+      <div class="location">
+      <address class="our-location footer-item">г. Киев, пр-т Леси Украинки, 26</address>
       <ul>
-      <li><a class="link bottom-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="footer-item"><a  href="mailto:info@devstudio.com" class="link bottom-link ">info@devstudio.com</a></li>
       <li><a class="link bottom-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+      </div>
   </footer>
   </body>
 </html>
