--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
           <p class="profile-text">Дизайн</p>
         </li>
 
-        <li class="profile-content-min">
+        <li class="profile-content">
           <img class="prof-img" src="./images/3.jpg" alt="1" width="370" />
           <h3 class="profile-title">Ресторан Seafood</h3>
           <p class="profile-text">Приложение</p>
@@ -69,7 +69,7 @@
           <p class="profile-text">Приложение</p>
         </li>
 
-        <li class="profile-content-min">
+        <li class="profile-content">
           <img class="prof-img" src="./images/6.jpg" alt="1" width="370" />
           <h3 class="profile-title">Inspiration has no Borders</h3>
           <p class="profile-text">Веб-сайт</p>
@@ -87,7 +87,7 @@
           <p class="profile-text">Маркетинг</p>
         </li>
 
-        <li class="profile-content-min">
+        <li class="profile-content">
           <img class="prof-img" src="./images/9.jpg" alt="1" width="370" />
           <h3 class="profile-title">Growing Business</h3>
           <p class="profile-text">Приложение</p>
@@ -99,7 +99,6 @@
     <footer class="info-links">
       <div class="container main-bottom">
       <a class="link logo-bottom" href="./"><span class="web">Web</span>Studio</a>
-      <div class="location">
       <address class="our-location footer-item">г. Киев, пр-т Леси Украинки, 26</address>
       <ul>
       <li class="footer-item"><a  href="mailto:info@devstudio.com" class="link bottom-link ">info@devstudio.com</a></li>
