--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             <li class="info-block">
                 <h3 class="info-title">Внимание к деталям</h3>
                 <p class="info-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li>
+            </li class="info-block">
+            <li class="info-block">
                 <h3 class="info-title">Пунктуальность</h3>
                 <p class="info-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li>
+            <li class="info-block">
                 <h3 class="info-title">Планирование</h3>
                 <p class="info-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-            <li><h3 class="info-title">Современные технологии </h3>
+            <li class="info-block"><h3 class="info-title">Современные технологии </h3>
             <p class="info-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
@@ -58,9 +58,9 @@
         <div class="wwd-main container">
         <h2 class="wwd-title">Чем мы занимаемся</h2>
         <ul class="wwd-list">
-        <li><img class="img" src="./images/box1.jpg" alt="notebook" width="370"></li>
-        <li><img class="img" src="./images/box2.jpg" alt="with hand" width="370"></li>
-        <li><img class="img-q" src="./images/box3.jpg" alt="tablet" width="370"></li>
+        <li  class="img"><img src="./images/box1.jpg" alt="notebook" width="370"></li>
+        <li  class="img"><img src="./images/box2.jpg" alt="with hand" width="370"></li>
+        <li  class="img"><img src="./images/box3.jpg" alt="tablet" width="370"></li>
         </ul>
         </div>
     </section>
@@ -68,16 +68,16 @@
         <div class="container tam-main">
         <h2 class="team-title">Наша команда</h2>
         <ul class="team-list">
-            <li class="team-card"><div class="team-img"><img src="./images/teamcard1.jpg" alt="1" width="270"></div>
+            <li class="team-card"><div><img src="./images/teamcard1.jpg" alt="1" width="270"></div>
             <div class="team-txt"><h3 class="team-subtitle">Игорь Демьяненко</h3>
             <p class="team-text">Product Designer</p></div></li>
-            <li class="team-card"><div class="team-img"><img src="./images/teamcard2.jpg" alt="1" width="270"></div>
+            <li class="team-card"><div><img src="./images/teamcard2.jpg" alt="1" width="270"></div>
                 <div class="team-txt"><h3 class="team-subtitle">Ольга Репина</h3>
             <p class="team-text">Frontend Developer</p></div></li>
-            <li class="team-card"><div class="team-img"><img src="./images/teamcard3.jpg" alt="1" width="270"></div>
+            <li class="team-card"><div><img src="./images/teamcard3.jpg" alt="1" width="270"></div>
                 <div class="team-txt"><h3 class="team-subtitle">Николай Тарасов</h3>
             <p class="team-text">Marketing</p></div></li>
-            <li class="team-card"><div class="team-img"><img src="./images/teamcard3.jpg" alt="1" width="270"></div>
+            <li class="team-card"><div><img src="./images/teamcard3.jpg" alt="1" width="270"></div>
                 <div class="team-txt"><h3 class="team-subtitle">Михаил Ермаков</h3>
             <p class="team-text">UI Designer</p></div></li>
         </ul>
@@ -87,11 +87,10 @@
 <footer class="info-links">
     <div class="container main-bottom">
     <a class="link logo-bottom" href="./"><span class="web">Web</span>Studio</a>
-    <div class="location">
     <address class="our-location footer-item">г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
     <li class="footer-item"><a  href="mailto:info@devstudio.com" class="link bottom-link ">info@devstudio.com</a></li>
-    <li><a class="link bottom-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <li class="footer-item"><a class="link bottom-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
     </div>
 </footer>
