--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </section>
     <section class="team">
-        <div class="container tam-main">
+        <div class="container team-main">
         <h2 class="team-title">Наша команда</h2>
         <ul class="team-list">
             <li class="team-card"><div><img src="./images/teamcard1.jpg" alt="1" width="270"></div>
@@ -90,7 +90,7 @@
     <address class="our-location footer-item">г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
     <li class="footer-item"><a  href="mailto:info@devstudio.com" class="link bottom-link ">info@devstudio.com</a></li>
-    <li class="footer-item"><a class="link bottom-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <li><a class="link bottom-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
     </div>
 </footer>
