--- a/portfolio.html
+++ b/portfolio.html
@@ -41,56 +41,74 @@
       <ul class="profile-img">
         <li class="profile-content">
           <img class="prof-img" src="./images/1.jpg" alt="1" width="370" />
+          <div class="card-content">
           <h3 class="profile-title">Технокряк</h3>
           <p class="profile-text">Веб-сайты</p>
+        </div>
         </li>
 
         <li class="profile-content">
           <img class="prof-img" src="./images/2.jpg" alt="1" width="370" />
+          <div class="card-content">
           <h3 class="profile-title">Постер New Orlean vs Golden Star</h3>
           <p class="profile-text">Дизайн</p>
+        </div>
         </li>
 
         <li class="profile-content">
           <img class="prof-img" src="./images/3.jpg" alt="1" width="370" />
+          <div class="card-content">
           <h3 class="profile-title">Ресторан Seafood</h3>
           <p class="profile-text">Приложение</p>
+        </div>
         </li>
 
         <li class="profile-content">
           <img class="prof-img" src="./images/4.jpg" alt="1" width="370" />
+          <div class="card-content">
           <h3 class="profile-title">Проект Prime</h3>
           <p class="profile-text">Маркетинг</p>
+        </div>
         </li>
 
         <li class="profile-content">
           <img class="prof-img" src="./images/5.jpg" alt="1" width="370" />
+          <div class="card-content">
           <h3 class="profile-title">Проект Boxes</h3>
           <p class="profile-text">Приложение</p>
+        </div>
         </li>
 
         <li class="profile-content">
           <img class="prof-img" src="./images/6.jpg" alt="1" width="370" />
+          <div class="card-content">
           <h3 class="profile-title">Inspiration has no Borders</h3>
           <p class="profile-text">Веб-сайт</p>
+        </div>
         </li>
 
         <li class="profile-content">
           <img class="prof-img" src="./images/7.jpg" alt="1" width="370" />
+          <div class="card-content">
           <h3 class="profile-title">Издание Limited Edition</h3>
           <p class="profile-text">Дизайн</p>
+        </div>
         </li>
 
         <li class="profile-content">
           <img class="prof-img" src="./images/8.jpg" alt="1" width="370" />
+          <div class="card-content">
           <h3 class="profile-title">Проект LAB</h3>
           <p class="profile-text">Маркетинг</p>
+        </div>
         </li>
 
         <li class="profile-content">
           <img class="prof-img" src="./images/9.jpg" alt="1" width="370" />
+          <div class="card-content">
           <h3 class="profile-title">Growing Business</h3>
           <p class="profile-text">Приложение</p>
+        </div>
         </li>
       </ul>
     </div>
@@ -99,6 +117,7 @@
     <footer class="info-links">
       <div class="container main-bottom">
       <a class="link logo-bottom" href="./"><span class="web">Web</span>Studio</a>
+      <div class="location">
       <address class="our-location footer-item">г. Киев, пр-т Леси Украинки, 26</address>
       <ul>
       <li class="footer-item"><a  href="mailto:info@devstudio.com" class="link bottom-link ">info@devstudio.com</a></li>
